feat(resetdb): Add api to reset database
